Grid: Hover fix on Mobile Safari

--- a/src/style.scss
+++ b/src/style.scss
@@ -202,6 +202,7 @@ body {
     }
 
     .year {
+        min-width: 0;
         padding: 2px;
         height: 20px;
         background-color: var(--color);
